Bug 66668 - FILESAVE: Saving an XLSX file freezes Calc
Summary: FILESAVE: Saving an XLSX file freezes Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: BSA Confirmed:4.2.2.1:OSX target:5.2....
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2013-07-07 14:00 UTC by Tal Haramaty
Modified: 2020-05-01 10:04 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The xlsx file that freezes when trying to save (9.79 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-07-07 14:00 UTC, Tal Haramaty
Details
backtrace from procdump in LO 5.1 alpha (10.70 KB, text/plain)
2015-05-25 15:50 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tal Haramaty 2013-07-07 14:00:51 UTC
Created attachment 82141 [details]
The xlsx file that freezes when trying to save

Problem description: Trying to save the file as an XLSX file

Steps to reproduce:
1. load the file I attached
2. try to save it
3. ....

Current behavior: Freezes

Expected behavior: Save and continue work

              
Operating System: Windows 7
Version: 4.0.4.2 release
Comment 1 Jorendc 2013-07-11 13:33:18 UTC
I can confirm this behavior. Tested using Mac OSX 10.8.4 with LibreOffice 4.1.0.2.

@Markus: ping :)

Kind regards,
Joren
Comment 2 Kevin Suo 2013-08-01 01:26:56 UTC
I can confirm, libreoffice 4.1.0.4, ubuntu 13.04 x86-64.
Comment 3 Michaël Benjamin Saerens 2014-05-21 11:46:28 UTC
I can partially confirm this.

LibreOffice: Calc 4.2.3.3
OS: Ubuntu 14.04 LTS 64-bit

I downloaded an *.xls file, after modifying it and saving it, save as *.xls or save as *.xlsx, Calc freezes, 1 core at 100%

I downloaded an *.xlsx file, after modifying it and saving it as another *.xlsx, the save process went as expected and Calc did not freeze.
Comment 4 Markus Mohrhard 2015-05-20 18:29:00 UTC
Can you please make sure not to change the whiteboard entries? You have changed them now in at least 3 different bugs.
Comment 5 Zangune 2015-05-20 18:33:10 UTC
https://wiki.documentfoundation.org/QA/Bugzilla/Gardening#Task:_Use_proper_markup_in_the_Whiteboard

"Tags in the Whiteboard should follow our Markup Guidelines. We can update tags to harmonize our usage."

https://wiki.documentfoundation.org/QA/Bugzilla/Fields/Whiteboard#Markup

"Use wimpyCaps Wikipedia logo v3.svg for all tags

    i.e. first word lower-case, following words Upper-Case, and no inter-word spaces
"
Comment 6 Timur 2015-05-21 14:04:07 UTC
Reproduced in LO 5.0 alpha1, not reproduced in LO 3.3.4, version set as 3.4.0, regression.

I couldn't get a backtrace with WinDBG because it doesn't crash, it's just busy.
Comment 7 Timur 2015-05-25 15:50:10 UTC
Created attachment 116024 [details]
backtrace from procdump in LO 5.1 alpha

MODULE_NAME: sal3
IMAGE_NAME:  sal3.dll
FAILURE_BUCKET_ID:  STATUS_BREAKPOINT_80000003_sal3.dll!std::basic_string_char,std::char_traits_char_,std::allocator_char___::_Tidy
Comment 8 Timur 2015-10-29 15:03:15 UTC
*** Bug 95346 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2015-11-30 12:55:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=343e405f18a51abd6d386072ad33978fa83b8b31

tdf#66668 - FILESAVE: Saving an XLSX file freezes Calc

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-12-01 06:38:03 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5d1ab09936040689b96fc724d4ada13385131a55&h=libreoffice-5-1

tdf#66668 - FILESAVE: Saving an XLSX file freezes Calc

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2020-05-01 10:04:50 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ea44e0072c97611de0285d9080f11fcfdac1028

tdf#66668: sc: Add unittest

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.