tdf#66668 - FILESAVE: Saving an XLSX file freezes Calc

Change-Id: I7abbb1cc5056f33458257afe28ed933e2d3c378d